--- a/package.json
+++ b/package.json
@@ -8,8 +8,37 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.7",
+    "@apollo/react-hooks": "^4.0.0",
+    "graphql": "^15.4.0",
+    "minireset.css": "0.0.6",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "^1.19.2",
+    "@graphql-codegen/typescript": "^1.17.11",
+    "@graphql-codegen/typescript-operations": "^1.17.10",
+    "@graphql-codegen/typescript-react-apollo": "^2.1.1",
+    "@types/eslint": "^7.2.5",
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.7",
+    "@types/prettier": "^2.1.5",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "hasura-cli": "^1.3.2",
+    "prettier": "^2.1.2",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.0.5"
   }
 }
